# gvs

./: CHANGES  Copyright  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.in
doc/: 2A-52i.html  2A-53-c.html  2A-53-d.html  2A-53-dc.html  2A-53-v4.html  2A-53-w.html  2A-53.html  2A-54-dc.html  2A-54.html  2A-55.html  2A-56.html  2A-57.html  3A-53.html  3A-54.html  3A-55.html  Makefile.am  Makefile.in  gvs_body.html  gvs_content.html  index.html  level_1.html  sprint.html  trmm_gv_dataflow.fig  trmm_gv_dataflow.xbm  uf2mudras.html
format_conversion/: 2A-53  2A-53_hdf2ascii.c  2A-53or2A-55  2A-54_hdf2ascii.c  2A-55_hdf2ascii.c  CHANGES  Makefile.am  Makefile.in  README  level_1_ghdf_to_singlevos_uf.c  level_2_ghdf_to_singlevos_ascii  level_2_ghdf_to_singlevos_hdf.c  level_2_singlevos_hdf_to_ghdf.c  level_3_rrmap_hdf2ascii.c  sprint_base_scan.inp  sprint_entire_volume.inp  uf2mudras
format_conversion/tsdis_toolkit/: Makefile.am  Makefile.in  TS_61  TS_GVFC_61.h
script/: Makefile.am  Makefile.in  grep_runtime_parm.pl
src/: Makefile.am  Makefile.in
src/2A-52i/: 2A-52i.c  CHANGES  CHECK_LIST  Makefile.am  Makefile.in  README  process_new_closest_vos_in_the_previous_granule  sort_2A52_and_remove_dups
src/2A-52i/tsdis_toolkit/: Makefile.am  Makefile.in  TS_2A52_60.h  TS_60
src/2A-53/: CHANGES  CHECK_LIST  Makefile.am  Makefile.in  README
src/2A-53/danny/: 2A53.c  CHANGES  Makefile.am  Makefile.in  README  bbf.f  buildvos.f  cshouze.f  getzh.f  grad.f  gwin.f  intrinsics.c  julian.c  mds.f  mlb_sitelist  p_drw.pl  p_mlb.pl  pol2cart.f  rdvosp.f  readzr.f  setvos.f  singlevos_2A-53-d  sitelist_cscale  sort.f  swin.f  voswin.f  voswin.par  write_rrmap2hdf.c  zr_drw.out  zr_mlb.out
src/2A-53/dual-cappi/: 2A53.h  Makefile.am  Makefile.in  README  singlevos_2A-53-dc.c  write_rrmap2hdf_file.c  zr.c  zr_table.h
src/2A-53/dual-cappi/tsdis_toolkit/: Makefile.am  Makefile.in
src/2A-53/pi-c/: 2A53c.c  CHANGES  Makefile.am  Makefile.in  README  singlevos_2A-53-c
src/2A-53/ver4/: 2A53_metadata.txt  KAMA_05-1994_FACE_uniform.zr  KLSX_07-1993_FACE_uniform.zr  Makefile.am  Makefile.in  README  darw_Dec1997.zr  dual.zr  hstn_Feb1998.zr  interpolate.cc  kwaj_Dec1997.zr  kwaj_Dec1997Jan1998.zr  kwaj_Jan1998.zr  melb_Feb1998.zr  runtime_2A-53_DARW.txt  runtime_2A-53_HSTN.txt  runtime_2A-53_KAMA.txt  runtime_2A-53_KLSX.txt  runtime_2A-53_KWAJ.txt  runtime_2A-53_MIAM.txt  runtime_2A-53_RADT.txt  single.zr  singlevos_2A-53-v4.c  toolkit_error_msg.txt
src/2A-53/ver4/tsdis_toolkit/: Makefile.in  TS_2A53_31.h  TS_31
src/2A-53/witek/: CHANGES  Makefile.am  Makefile.in  README  accumulation.c  advective_accum.c  aiw.h  carttopol.c  classmap.h  compress.c  compress.h  encode.c  encode.h  error.c  error.h  instfield.c  io.c  julday.c  nrainest.c  poltocart.c  prep_proc.c  products.c  rainest.c  rainest.h  readray.c  settozero.c  singlevos_2A-53-w  trap_signals.c  write5day.c  write_rrmap2hdf.c  writeday.c  writeminute.c  writemonth.c
src/2A-53/witek/data/: Makefile.am  Makefile.in
src/2A-54/: CHANGES  CHECK_LIST  Makefile.am  Makefile.in  README
src/2A-54/src/: 2A-54  2A-54-dc  2A54.cc  2A54.h  2A54_metadata.txt  ANALconv_stra.cc  Makefile.am  Makefile.in  PREPvalid_range.cc  README  READgauge.cc  READgeogr.cc  READparam.cc  VOLfindPoints.cc  VOLio.cc  VOLlifecycle.cc  exitCodes.h  findPoints.h  singlevos_2A-54  singlevos_2A-54-dc.cc  tsdistk_2A-54_error_msg.txt  volume.h  write_csmap2hdf.c
src/2A-54/src/tsdis_toolkit/: Makefile.am  Makefile.in  TS_2A54_32.h  TS_32
src/2A-55/: CHANGES  CHECK_LIST  Makefile.am  Makefile.in  README
src/2A-55/src/: 2A-55  2A55.cc  2A55.h  2A55_metadata.txt  ANALhist_cfad.cc  ANALmean_prof.cc  Makefile.am  Makefile.in  READgauge.cc  READgeogr.cc  READparam.cc  VOLio.cc  VOLlifecycle.cc  exitCodes.h  mudras.cc  mudras.h  output_hdf.cc  singlevos_2A-55  tsdistk_2A-55_error_msg.txt  volume.h  write_grid_to_hdf.c
src/2A-55/src/geomap/: KwajMap.cc  Makefile.am  Makefile.in  README  WichitaMap.cc  mkgeomap.cc
src/2A-55/src/geomap/maps/: Makefile.am  Makefile.in
src/2A-55/src/tsdis_toolkit/: Makefile.am  Makefile.in  TS_2A55_33.h  TS_33
src/2A-56/: CHANGES  Makefile.am  Makefile.in  README  gmin_to_granule_ascii  granulate_gmin_files
src/2A-57/: CHANGES  Makefile.am  Makefile.in  README  disdro_to_granule_ascii  granulate_disdro_files
src/3A-53/: 3A-53  CHANGES  Makefile.am  Makefile.in  README
src/3A-54/: 3A-54  3A54_metadata.txt  CHANGES  Makefile.am  Makefile.in  README
src/3A-55/: 3A-55  3A-55_ascii2hdf.c  3A55.h  CHANGES  Makefile.am  Makefile.in  README  level_2_dump_metadata.c  level_3_accu_2A-55  level_3_accu_cfad.c  level_3_accu_vprof.c  level_3_finalize_metadata.c  level_3_mean_vprof.c
src/3A-55/tsdis_toolkit/: Makefile.am  Makefile.in  TS_3A55_43.h  TS_43
src/acc_rrmaps/: CHANGES  Makefile.am  Makefile.in  README  acc_maps.cc  acc_rrmaps_granule_hdf  arrayutil.cc  assortutil.cc  create_level_3_rrmap_hdf.c  defs.h  tsdistk_acc_rrmaps_error_msg.txt
src/acc_rrmaps/tsdis_toolkit/: Makefile.am  Makefile.in  TS_63  TS_ACC_RRMAP_63.h
src/gvslib/: CHANGES  Makefile.am  Makefile.in  README  gvs_metadata.c  gvs_metadata.h  gvs_sat_coin.c  gvs_sat_coin.h
src/level_1/: CHANGES  Makefile.am  Makefile.in  README  buildvos.f  level_1.c  level_1_null_granule.c  level_1_qc.c  qc.f  setvos.f  truncate_volume.c  truncate_volume.h  vosqc.f  vosqc.par
src/level_1/data/: KWAJ.cluttermap  Makefile.am  Makefile.in  qc_params_BROW  qc_params_CORC  qc_params_DARB  qc_params_DARW  qc_params_GRAN  qc_params_GUAM  qc_params_HAWA  qc_params_HSTN  qc_params_ISBN  qc_params_JACK  qc_params_KEYW  qc_params_KWAJ  qc_params_LKCH  qc_params_MELB  qc_params_MIAM  qc_params_NOAA  qc_params_NWBR  qc_params_RADT  qc_params_SAOP  qc_params_TALL  qc_params_TAMP  qc_params_TAMU  qc_params_THOM  qc_params_THPH  qc_params_TOGA  qc_params_TWWF
src/utils/: CHANGES  Makefile.am  Makefile.in  README  date2pentad_number.c  get_info_from_file.c  get_radar_name_from_file.c  level_2_create_empty_granule_hdf.c  pentad_number2begin_date.c
