AUTOMAKE_OPTIONS = foreign

docdir = $(prefix)/doc/$(PACKAGE)
doc_DATA = $(img_doc) $(html_doc)

img_doc = gvs_logo.gif gvs_bg.gif trmm_gv_dataflow.fig trmm_gv_dataflow.xbm \
	      gvs.gif
html_doc = \
 gvs_content.html \
 gvs_body.html \
 index.html \
 uf2mudras.html \
 sprint.html \
 2A-52i.html \
 2A-53-d.html \
 2A-53.html \
 2A-53-c.html \
 2A-53-v4.html \
 2A-53-dc.html \
 2A-53-w.html \
 2A-54.html \
 2A-54-dc.html \
 2A-55.html \
 2A-56.html \
 2A-57.html \
 3A-53.html \
 3A-54.html \
 3A-55.html \
 level_1.html

EXTRA_DIST = $(doc_DATA)
